# diplomat-dbg

./: .gitignore  Cargo.toml  README.md
js/: .gitignore  diplomat.config.mjs  index.js  index.ts  tsconfig.json
js/api/: SliceGetter.mjs  index.d.ts
js_slice/: Cargo.toml  README.md
js_slice/js/: .gitignore  index.js  package-lock.json  package.json
js_slice/js/api/: SliceGetter.d.ts  index.mjs
js_slice/src/: lib.rs
wasm_bindgen/: Cargo.toml  README.md
wasm_bindgen/js/: .gitignore  diplomat.config.mjs  index.js  index.ts  package.json  tsconfig.json
wasm_bindgen/js/api/: Tok.d.ts  Tok.mjs  dbg.js  dbg_bg.js  dbg_bg.wasm.d.ts  diplomat-wasm.mjs  index.d.ts  index.mjs
wasm_bindgen/src/: lib.rs
